--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DATABASE = mongodb+srv://alumni:alumni@cluster0.kg6fvid.mongodb.net/?retryWrites=true&w=majority
-DB_NAME = alumni
+DB_NAME = final_project
