--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "homepage": "",
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -31,6 +33,7 @@
         "morgan": "^1.10.0",
         "nodemon": "^2.0.21",
         "swagger-ui-express": "^4.6.0",
+        "util": "^0.12.5",
         "validator": "^13.9.0",
         "xss-clean": "^0.1.1",
         "yamljs": "^0.3.0"
