--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "license": "ISC",
     "homepage": "",
     "dependencies": {
+        "@adminjs/express": "^5.1.0",
+        "@adminjs/mongoose": "^3.0.3",
+        "@adminjs/passwords": "^3.0.1",
+        "adminjs": "^6.8.7",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
