--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "adminjs": "^6.8.7",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
+        "connect-mongo": "^5.0.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
@@ -29,6 +30,7 @@
         "express-fileupload": "^1.4.0",
         "express-mongo-sanitize": "^2.2.0",
         "express-rate-limit": "^6.7.0",
+        "express-session": "^1.17.3",
         "helmet": "^6.0.1",
         "http-status-codes": "^2.2.0",
         "joi": "^17.7.0",
