--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@adminjs/mongoose": "^3.0.3",
         "@adminjs/passwords": "^3.0.1",
         "adminjs": "^6.8.7",
+        "axios": "^1.3.4",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "connect-mongo": "^5.0.0",
