--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-fileupload": "^1.4.0",
+        "express-formidable": "^1.2.0",
         "express-mongo-sanitize": "^2.2.0",
         "express-rate-limit": "^6.7.0",
         "express-session": "^1.17.3",
